
####   Don't forget to change the version number in configure.ac!   ####

07 Oct 2005 Display SIGP order number in addition to description - Roger Bowler
06 Oct 2005 Store Facility List Extended (STFLE) - Roger Bowler
06 Oct 2005 Implemented ETF2 enhancements, still having the flu - Bernard van der Helm
06 Oct 2005 Implemented ETF3 and crypto while having the flu - Bernard van der Helm
05 Oct 2005 Fix segfault in HSCH if device is startpending - Greg
05 Oct 2005 Activate FEATURE_EXTENDED_IMMEDIATE - Roger Bowler
05 Oct 2005 Corrections to FLOGR instruction - Roger Bowler
05 Oct 2005 MIDAW corrections - Roger Bowler
04 Oct 2005 merge FEATURE_LOAD_ADDITIONAL into FEATURE_EXTENDED_IMMEDIATE - Roger Bowler
04 Oct 2005 rename FEATURE_LOAD_PAGE_TABLE_ENTRY_ADDRESS as FEATURE_DAT_ENHANCEMENT_FACILITY_2 - Roger Bowler
04 Oct 2005 rename FEATURE_BRANCH_DETECTION as FEATURE_PER3 - Roger Bowler
04 Oct 2005 rename FEATURE_CPACF_ENHANCEMENTS as FEATURE_MESSAGE_SECURITY_ASSIST_EXTENSION_1 - Roger Bowler
22 Sep 2005 tape/27: *proper* VC7 Large File Support - Fish 
21 Sep 2005 Init cckd->l2active to -1 instead of 0 - Greg
21 Sep 2005 tweak concpy to avoid double byteswap - Fish
21 Sep 2005 Add inline assembler assists to startup buildinfo display - Fish
21 Sep 2005 sysblk.mipsrate now per second instead of millisecond, fix
            bug in timer_update_thread when elapsed < 1 millisec - Fish
20 Sep 2005 Fix divide_single fixed-point-divide-exception check - Greg
16 Sep 2005 hercgui/22: issue dasdload REQCYL= progress msg sooner - Fish
16 Sep 2005 tape/27: discard bug-ridden VC7 Large File Support - Fish
16 Sep 2005 startio should return cc 2 if startpending is on - Greg
16 Sep 2005 Changes to allow building via Cygwin if desired - Fish
16 Sep 2005 Bring MSVC branch up-to-date with head branch - Fish
05 Sep 2005 Correct SSID in Sense Subsystem Status and Read Device Characteristics - Roger Bowler
05 Sep 2005 Sense Subsystem Status for 3990 model 6 - Roger Bowler